--- a/package.json
+++ b/package.json
@@ -1,27 +1,33 @@
 {
-  "name": "fullstack-job-board",
-  "version": "0.1.0",
-  "private": true,
-  "scripts": {
-    "dev": "next dev --turbopack",
-    "build": "next build",
-    "start": "next start",
-    "lint": "next lint"
-  },
-  "dependencies": {
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
-    "next": "15.4.0-canary.84"
-  },
-  "devDependencies": {
-    "typescript": "^5",
-    "@types/node": "^20",
-    "@types/react": "^19",
-    "@types/react-dom": "^19",
-    "@tailwindcss/postcss": "^4",
-    "tailwindcss": "^4",
-    "eslint": "^9",
-    "eslint-config-next": "15.4.0-canary.84",
-    "@eslint/eslintrc": "^3"
-  }
+    "name": "fullstack-ai-job-board",
+    "version": "0.1.0",
+    "private": true,
+    "scripts": {
+        "dev": "next dev --turbopack",
+        "build": "next build",
+        "start": "next start",
+        "lint": "next lint"
+    },
+    "dependencies": {
+        "@t3-oss/env-nextjs": "^0.13.8",
+        "drizzle-orm": "^0.44.2",
+        "next": "15.4.0-canary.84",
+        "pg": "^8.16.0",
+        "react": "19.1.0",
+        "react-dom": "19.1.0"
+    },
+    "devDependencies": {
+        "@eslint/eslintrc": "^3",
+        "@tailwindcss/postcss": "^4",
+        "@types/node": "^20",
+        "@types/pg": "^8.15.4",
+        "@types/react": "^19",
+        "@types/react-dom": "^19",
+        "drizzle-kit": "^0.31.1",
+        "eslint": "^9",
+        "eslint-config-next": "15.4.0-canary.84",
+        "prettier-plugin-tailwindcss": "^0.6.12",
+        "tailwindcss": "^4",
+        "typescript": "^5"
+    }
 }
