--- a/.env.example
+++ b/.env.example
@@ -4,3 +4,11 @@ DB_PASSWORD=
 DB_NAME=
 DB_HOST=
 DB_PORT=
+
+# Clerk authentication
+CLERK_SECRET_KEY=
+CLERK_WEBHOOK_SECRET=
+NEXT_PUBLIC_CLERK_PUBLISHABLE_KEY=
+NEXT_PUBLIC_CLERK_SIGN_IN_URL=
+NEXT_PUBLIC_CLERK_SIGN_IN_FALLBACK_REDIRECT_URL=
+NEXT_PUBLIC_CLERK_SIGN_UP_FALLBACK_REDIRECT_URL=
