--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "fullstack-ai-job-board",
+    "name": "NextStepFLQ",
     "version": "0.1.0",
     "private": true,
     "scripts": {
@@ -10,16 +10,46 @@
         "db:push": "drizzle-kit push",
         "db:generate": "drizzle-kit generate",
         "db:migrate": "drizzle-kit migrate",
-        "db:studio": "drizzle-kit studio"
+        "db:studio": "drizzle-kit studio",
+        "inngest": "inngest-cli dev -u http://localhost:3000/api/inngest"
     },
     "dependencies": {
+        "@clerk/nextjs": "^6.24.0",
+        "@clerk/themes": "^2.2.50",
+        "@hookform/resolvers": "^5.1.1",
+        "@mdxeditor/editor": "^3.39.1",
+        "@radix-ui/react-alert-dialog": "^1.1.14",
+        "@radix-ui/react-avatar": "^1.1.10",
+        "@radix-ui/react-collapsible": "^1.1.11",
+        "@radix-ui/react-dialog": "^1.1.14",
+        "@radix-ui/react-dropdown-menu": "^2.1.15",
+        "@radix-ui/react-label": "^2.1.7",
+        "@radix-ui/react-popover": "^1.1.14",
+        "@radix-ui/react-select": "^2.2.5",
+        "@radix-ui/react-separator": "^1.1.7",
+        "@radix-ui/react-slot": "^1.2.3",
+        "@radix-ui/react-switch": "^1.2.5",
+        "@radix-ui/react-tooltip": "^1.2.7",
         "@t3-oss/env-nextjs": "^0.13.8",
+        "@uploadthing/react": "^7.3.2",
+        "class-variance-authority": "^0.7.1",
+        "clsx": "^2.1.1",
+        "cmdk": "^1.1.1",
         "drizzle-orm": "^0.44.2",
+        "inngest": "^3.40.1",
+        "lucide-react": "^0.518.0",
         "next": "15.4.0-canary.84",
+        "next-themes": "^0.4.6",
         "pg": "^8.16.0",
         "react": "19.1.0",
         "react-dom": "19.1.0",
-        "zod": "^3.25.67"
+        "react-hook-form": "^7.60.0",
+        "react-resizable-panels": "^3.0.3",
+        "sonner": "^2.0.6",
+        "svix": "^1.69.0",
+        "tailwind-merge": "^3.3.1",
+        "uploadthing": "^7.7.3",
+        "zod": "^3.25.74"
     },
     "devDependencies": {
         "@eslint/eslintrc": "^3",
@@ -31,8 +61,10 @@
         "drizzle-kit": "^0.31.1",
         "eslint": "^9",
         "eslint-config-next": "15.4.0-canary.84",
+        "inngest-cli": "^1.8.2",
         "prettier-plugin-tailwindcss": "^0.6.12",
         "tailwindcss": "^4",
+        "tw-animate-css": "^1.3.4",
         "typescript": "^5"
     }
 }
